fixed login button visibility

--- a/public/Front-end/css/new-age.css
+++ b/public/Front-end/css/new-age.css
@@ -5,6 +5,10 @@
 
  this is bootstrap CSS config that can be used across the pages
  */
+#login {
+  color:#f29a5c;
+  border-color:#f29a5c;
+}
 #video {
     position: fixed;
     top: 50%;
